# _cosmodata_dev_utils

./: README.md  setup.cfg
_cosmodata_dev_utils/: __init__.py  _cosmo_params.py  _generate_a_bunch_of_notebooks.py  _generate_stuff.ipynb
